<resources>
    <string name="app_name">Student Data</string>
    <string name="StudentName">Enter student name</string>
    <string name="RollNumber">Enter roll number</string>
    <string name="IsEnrolled">IsEnrolled</string>
    <string name="ButtonViewAll">View All Records</string>
    <string name="Add">Add Record</string>
    <string name="title_activity_records">Records</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>